# pytest-html-validator

./: LICENSE  pixi.toml  pyproject.toml
src/pytest_html_validator/: __init__.py  pytest_plugin.py  utils.py  validator.py
